--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.3.2",
     "core-js": "^3.8.3",
+    "date-fns": "^2.29.3",
+    "marked": "^4.2.12",
+    "pinia": "^2.0.30",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.3"
